--- a/package.json
+++ b/package.json
@@ -24,21 +24,22 @@
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@sentry/nextjs": "^8.28.0",
+    "@sentry/nextjs": "^8.55.0",
     "@tanstack/react-query": "^5.51.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "i18next": "^25.4.1",
+    "i18next": "^23.12.2",
+    "i18next-http-backend": "^2.5.2",
     "lucide-react": "^0.427.0",
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "^15.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.0",
-    "react-i18next": "^15.0.2",
+    "react-i18next": "^14.1.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
@@ -49,7 +50,7 @@
   "devDependencies": {
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
-    "@next/bundle-analyzer": "^14.2.14",
+    "@next/bundle-analyzer": "^15.5.2",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.0",
@@ -59,7 +60,7 @@
     "@typescript-eslint/parser": "^8.6.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
+    "eslint-config-next": "^15.5.2",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "husky": "^9.1.6",
