Theme Customization done nd working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,12 @@
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
+        "allowSyntheticDefaultImports": true,
         "plugins": [
             {
                 "name": "next"
@@ -24,25 +25,28 @@
         ],
         "baseUrl": ".",
         "paths": {
-            "@/*": [
+            "#/*": [
                 "./src/*"
             ],
-            "@/components/*": [
+            "#/components/*": [
                 "./src/components/*"
             ],
-            "@/lib/*": [
+            "#/lib/*": [
                 "./src/lib/*"
             ],
-            "@/types/*": [
+            "#/types/*": [
                 "./src/types/*"
             ],
-            "@/app/*": [
+            "#/app/*": [
                 "./src/app/*"
             ],
-            "@/hooks/*": [
+            // "#/styles/*": [
+            //     "./src/styles/*"
+            // ],
+            "#/hooks/*": [
                 "./src/lib/hooks/*"
             ],
-            "@/utils/*": [
+            "#/utils/*": [
                 "./src/lib/utils/*"
             ]
         }
