--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.12",
     "i18next": "^23.12.2",
     "i18next-http-backend": "^2.5.2",
     "lucide-react": "^0.427.0",
