--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.23.12",
     "i18next": "^23.12.2",
     "i18next-http-backend": "^2.5.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.427.0",
     "next": "^15.5.2",
     "react": "^18.3.1",
