--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.0",
     "react-i18next": "^14.1.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.4.0",
